--- a/pages/resources.html
+++ b/pages/resources.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Documentation
+title: Resources
 ---
 {% for post in site.categories.documentation %}
   <a href="{{ site.github.url }}{{ post.url }}">
